kubernetes/core-components/argocd/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  tls:
    secretName: home-lungoo-de-tls
  routes:
    - match: Host(`argocd.home.lungoo.de`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
